k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cost-janitor
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
  labels:
    app: cost-janitor
    component: ingress
spec:
  rules:
  - host: api.hellman.oxygen.dfds.cloud
    http:
      paths:
      - backend:
          serviceName: cost-janitor
          servicePort: web
        path: /cost-janitor
  - host: cost-janitor.hellman.oxygen.dfds.cloud
    http:
      paths:
      - backend:
          serviceName: cost-janitor
          servicePort: web
        path: /
